# Prism

./: README.md
llama.cpp-master/examples/: CMakeLists.txt
llama.cpp-master/examples/zoo/: CMakeLists.txt  README.md  build.sh  export_sst2_tsv.py  llama-cpu-decode.cpp  llama-cpu-inference.cpp  llama-npu-decode.cpp  llama-npu-inference.cpp  llama-zoo-batch.cpp  llama-zoo-disk-fasterrng.cpp  llama-zoo-disk-parallel.cpp  llama-zoo-disk.cpp  llama-zoo-mezo-lowranknoise.cpp  llama-zoo-mezo-npu.cpp  llama-zoo-mezo-parallel.cpp  llama-zoo-mezo-quantization.cpp  llama-zoo-mezo.cpp  llama-zoo-part.cpp  llama-zoo.cpp  measure_energy.sh  measure_energy_ace3.sh  measure_energy_k60.sh  measure_others.sh  npu_CMakeLists.txt  push_adb.sh  sst2_eval.tsv  sst2_train.tsv
server/: README.md  data_loader.py  lora.py  main.py  requirements.txt  trainer.py  utils.py
server/experiments/: run.sh
server/experiments/fo/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/lora_a16_r16/: llama.sh  phi.sh  qwen.sh  run.sh
server/experiments/lora_a16_r8/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/lora_a32_r16/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/lora_a64_r32/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/loss/: phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/mezo/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/mobizo/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/only1/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/only2/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/only3/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/quankai/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/quankai-1/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/quankai-2/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/quankai-4/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/sign/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/wo1/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/wo2/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/wo3/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/wo3-4/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
server/experiments/zero_shot/: llama.sh  phi.sh  qwen.sh  run.sh  tinyllama.sh
